Fix: Uploaded Image aligned to center

--- a/src/components/ImageClassifier/ImageClassifier.module.css
+++ b/src/components/ImageClassifier/ImageClassifier.module.css
@@ -60,6 +60,7 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
+    /* Ensure the image is centered horizontally */
     position: relative;
 }
 
@@ -88,7 +89,7 @@
 /* Upload Buttons */
 .uploadSelfie,
 .uploadImage {
-    background-color: black;
+    background-color: #150909c7;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -102,7 +103,8 @@
 .uploadSelfie:hover,
 .uploadImage:hover {
     transform: scale(1.1);
-    background-color: #333;
+    background-color: rgb(24, 4, 4);
+
 }
 
 /* Icon Styling */
@@ -116,6 +118,11 @@
     width: 100%;
     height: 100%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
     cursor: pointer;
 }
 
@@ -124,13 +131,14 @@
     max-width: 350px;
     max-height: 350px;
     width: 100%;
-    /* Ensures it takes up the full width of the container */
     height: 350px;
-    /* Set a fixed height */
     object-fit: cover;
-    /* This keeps the aspect ratio of the image */
     border-radius: 10px;
     transition: filter 0.3s;
+    display: block;
+    /* Ensures the image is treated as a block-level element */
+    margin: 0 auto;
+    /* Center the image inside its parent container */
 }
 
 
